src/objects/POStatus__c.object
<CustomObject>
    <fields>
        <fullName>APINVCurrency__c</fullName>
        <label>Invoice Currency</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APINVDate__c</fullName>
        <label>AP Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APINVLineAmount__c</fullName>
        <label>AP INV Line Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APINVLine__c</fullName>
        <label>AP INV Line</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APInvoiceNumber__c</fullName>
        <label>AP Invoice Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APPaidAmount__c</fullName>
        <label>AP Paid Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APPaidDate__c</fullName>
        <label>AP Paid Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTotalAmount__c</fullName>
        <label>AP Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AP_Invoice__c</fullName>
        <externalId>true</externalId>
        <label>AP Invoice</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APinvLineFunctAmount__c</fullName>
        <label>AP INV Line Functional Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Allocated__c</fullName>
        <label>Allocated</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ETLDate__c</fullName>
        <label>ETL Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ETLJobId__c</fullName>
        <label>ETL Job Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>HasPaymentBeenMade__c</fullName>
        <formula>IF( ISBLANK( AP_Invoice__c ) , true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Has Payment Been Made</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OUID__c</fullName>
        <label>OU ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OracleErrorMessage__c</fullName>
        <label>Oracle Error Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OracleSyncStatus__c</fullName>
        <description>P = Pending 
T = Transfer (Success) 
E = Error 
S = Successful</description>
        <inlineHelpText>P = Pending 
T = Transfer (Success) 
E = Error 
S = Successful</inlineHelpText>
        <label>Oracle Sync Status</label>
        <picklist>
            <picklistValues>
                <fullName>E</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>S</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PODistribution__c</fullName>
        <label>PO Distribution</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>POHeader__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Purchase Order</label>
        <referenceTo>POHeader__c</referenceTo>
        <relationshipLabel>PO Statuses</relationshipLabel>
        <relationshipName>PO_Statuses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>POHeader_del__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Purchase Order</label>
        <referenceTo>Purchase_Order__c</referenceTo>
        <relationshipLabel>PO Statuses</relationshipLabel>
        <relationshipName>PO_Statuses_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>POLine__c</fullName>
        <label>PO Line</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PONumber__c</fullName>
        <label>PO Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remaining__c</fullName>
        <label>Remaining</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>StagedDate__c</fullName>
        <label>Staged Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SupplierID__c</fullName>
        <label>Supplier ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SupplierNumber__c</fullName>
        <label>Supplier Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TotalAmount__c</fullName>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>PO Status</label>
    <nameField>
        <displayFormat>POS-{000000}</displayFormat>
        <label>PO Status Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PO Statuses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>